[package]
name = "common-crawl-character-count"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4.32", features = ["gzip", "tokio"] }
bytes = "1.10.1"
chardetng = "0.1.17"
clap = { version = "4.5.51", features = ["derive"] }
counter = { version = "0.6.0", features = ["serde"] }
futures-util = "0.3.31"
log = "0.4.28"
num_cpus = "1.17.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["stream"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
select = "0.6.1"
serde = "1.0.228"
thiserror = "2.0.17"
tld = "2.36.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tokio-util = { version = "0.7.16", features = ["io"] }
unicode-segmentation = "1.12.0"
url = "2.5.7"
vow = "0.1.3"
warc = "0.4.0"
