[package]
name = "common-crawl-character-count"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4.36", features = ["gzip", "tokio"] }
bytes = "1.11.0"
chardetng = "0.1.17"
clap = { version = "4.5.53", features = ["derive"] }
counter = { version = "0.6.0", features = ["serde"] }
futures-util = "0.3.31"
log = "0.4.29"
num_cpus = "1.17.0"
regex_static = "0.1.1"
reqwest = { version = "0.12.26", features = ["stream"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.8.0"
select = "0.6.1"
serde = "1.0.228"
thiserror = "2.0.17"
tld = "2.37.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tokio-util = { version = "0.7.17", features = ["io"] }
unicode-segmentation = "1.12.0"
url = "2.5.7"
vow = "0.1.3"
warc = "0.4.0"
